--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="15dp"
             android:background="@null"
             android:scaleType="centerInside"
+            android:contentDescription="@string/desc_filters"
             android:layout_gravity="center_vertical"
             android:tint="@color/white"
             android:src="@drawable/ic_filter"/>
@@ -50,6 +51,6 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:contentDescription=""/>
+        android:contentDescription="@string/desc_list"/>
 
 </LinearLayout>
