--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,6 @@
         app:queryHint="Поиск по названию"
         app:iconifiedByDefault="false"
         android:inputType="text"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="25dp"
         android:layout_marginHorizontal="22dp"
         app:searchIcon="@drawable/customicon"/>
@@ -28,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:paddingHorizontal="16dp"
         android:scrollbars="none"
         />
@@ -39,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="50dp"
-        android:text="Здесь пока ничего нет (・・ ) ? "
+        android:text="@string/empty_message"
         android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -47,8 +46,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="60dp"
+        android:contentDescription="@string/desc_list"
         android:scrollbarThumbVertical="@color/main_purple"/>
 
 
