--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -19,7 +19,7 @@
             android:textColor="@color/white_gray2"
             android:textSize="16sp"
             android:layout_marginEnd="8dp"
-            android:text="Название" />
+            android:text="@string/name" />
 
         <TextView
             android:id="@+id/filter_count"
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white_gray3"
             android:textSize="14sp"
-            android:text="0" />
+            android:text="@string/test_number" />
     </LinearLayout>
 
     <View
