--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,19 @@
     <item
         android:id="@+id/navigation_list"
         android:icon="@drawable/ic_library"
+        android:contentDescription="@string/list"
         android:title="" />
 
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search"
+        android:contentDescription="@string/search"
         android:title="" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile"
+        android:contentDescription="@string/profile"
         android:title="" />
 
 </menu>
