--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -253,9 +253,9 @@
                 android:paddingVertical="8dp"
                 android:text="@string/kinopoisk"
                 android:textAllCaps="false"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="22sp"
-                android:background="@drawable/rounded_button_background"
+                android:background="@drawable/rounded_button_cansel_border"
                 android:drawableStart="@drawable/ic_play"
                 android:drawablePadding="5dp"
                 android:paddingStart="100dp"
