--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="cornerSizeTopRight">0dp</item>
     </style>
 
+    <style name="BottomNavIndicatorNone" parent="">
+        <item name="android:visibility">gone</item>
+    </style>
+
 </resources>
