--- a/app/src/main/res/drawable/rounded_button_cansel_border.xml
+++ b/app/src/main/res/drawable/rounded_button_cansel_border.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/gray555" />
+        android:color="?attr/colorOutline" />
 
     <corners android:radius="18dp" />
 </shape>
