--- a/app/src/main/res/layout/bottom_sheet_copy_titles.xml
+++ b/app/src/main/res/layout/bottom_sheet_copy_titles.xml
@@ -4,7 +4,7 @@
     android:padding="24dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray111">
+    android:background="?android:attr/colorBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="18sp"
             android:layout_marginEnd="8dp" />
 
@@ -29,21 +29,21 @@
             android:scaleType="centerInside"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/copy_name"
-            android:tint="@color/white" />
+            android:tint="?attr/colorOnBackground" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/fullTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="16sp"
         android:layout_marginBottom="16dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/gray333"
+        android:background="?attr/colorOutline"
         android:layout_marginBottom="16dp" />
 
     <LinearLayout
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/or_name"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="18sp"
             android:layout_marginEnd="8dp" />
 
@@ -69,14 +69,14 @@
             android:scaleType="centerInside"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/copy_or_name"
-            android:tint="@color/white" />
+            android:tint="?attr/colorOnBackground" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/fullOrTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="16sp"
         android:layout_marginBottom="24dp" />
 
@@ -86,5 +86,5 @@
         android:layout_height="wrap_content"
         android:text="@string/close"
         android:background="@drawable/rounded_button_cansel_border"
-        android:textColor="@color/gray_for_cancel"/>
+        android:textColor="?attr/colorSecondary"/>
 </LinearLayout>
